# ij-bazel-genproto-example

./: .bazelproject  .bazelrc  .gitignore  BUILD  Gopkg.toml  WORKSPACE  dependencies.yaml
cmd/hello-world-server/: BUILD.bazel  main.go
proto/helloworld/: BUILD  helloworld.proto
src/main/scala/example/: BUILD  Client.scala  JavapbClient.scala
src/main/scala/example/client/: BUILD.bazel  Client.scala
src/main/scala/example/helloworld/: BUILD.bazel  Client.scala  Config.scala  Server.scala  e2e_test.sh
