load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ceason/ij-bazel-genproto-example/cmd/hello-world-server",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/helloworld:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "hello-world-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
