load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")

scala_binary(
    name = "client",
    srcs = ["Client.scala"],
    main_class = "example.client.Client",
    deps = [
        "//src/main/scala/example:helloworld_java_grpc",
#        "//src/main/scala/example:helloworld_java_proto",
#        "@com_google_protobuf//:protobuf_java",
#        "@io_grpc_grpc_java//core",
#        "@io_grpc_grpc_java//stub",
    ],
)
