#load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("@io_grpc_grpc_java//:java_grpc_aspect.bzl", "java_grpc_library")
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")

java_proto_library(
    name = "helloworld_java_proto",
    visibility = ["//src:__subpackages__"],
    deps = [
        "//proto/helloworld:helloworld_proto",
    ],
)

java_grpc_library(
    name = "helloworld_java_grpc",
    visibility = ["//src:__subpackages__"],
    deps = [
        "//proto/helloworld:helloworld_proto",
    ],
)

scala_binary(
    name = "client",
    srcs = ["Client.scala"],
    main_class = "example.helloworld.Client",
    deps = [
        ":helloworld_java_grpc",
    ],
)

scala_binary(
    name = "server",
    srcs = ["Server.scala"],
    main_class = "example.helloworld.Server",
    deps = [
        ":helloworld_java_grpc",
    ],
)
