load("@io_grpc_grpc_java//java_grpc_library:def.bzl", "java_grpc_library")
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_library")

java_proto_library(
    name = "helloworld_java_proto",
    deps = [
        "//proto/helloworld:helloworld_proto",
    ],
)

java_grpc_library(
    name = "helloworld_java_grpc",
    deps = [
        "//proto/helloworld:helloworld_proto",
    ],
)

scala_library(
    name = "config",
    srcs = ["Config.scala"],
)

scala_binary(
    name = "client",
    srcs = ["Client.scala"],
    main_class = "example.helloworld.Client",
    deps = [
        ":config",
        ":helloworld_java_grpc",
    ],
)

scala_binary(
    name = "server",
    srcs = ["Server.scala"],
    main_class = "example.helloworld.Server",
    deps = [
        ":config",
        ":helloworld_java_grpc",
    ],
)

sh_test(
    name = "e2e_test",
    srcs = ["e2e_test.sh"],
    args = [
        "$(location :server)",
        "$(location :client)",
    ],
    data = [
        ":client",
        ":server",
    ],
)
